Authenticate Customer and Driver

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "uberEatsVenv\\Scripts\\python.exe"
+  "python.pythonPath": "uberEatsVenv\\Scripts\\python.exe",
+  "python.linting.pylintArgs": ["--load-plugins", "pylint_django"]
 }
